--- a/Styles/Body.css
+++ b/Styles/Body.css
@@ -96,11 +96,24 @@ body{
     border-color: white;
     background-color: black;
     color: white;
-    width: 130px;
-    height: 50px;
+    padding: 8px;
     border-radius: 50px;
     font-size: 18px;
     font-weight: 500;
     margin-top: 20px;
+    cursor: pointer;
+}
+
+.autoplay-button{
+    border: solid;
+    border-color: white;
+    background-color: black;
+    color: white;
+    border-radius: 50px;
+    padding: 8px;
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-left: 20px;
     cursor: pointer;
 }
